[package]
name = "ghost-text"
version = "0.1.0"
edition = "2024"

[dependencies]

# serializaiton
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# async
tokio = { version = "1.45.0", features = ["full"] }
tokio-tungstenite = "0.26.2"
futures-util = { version = "0.3", default-features = false }

# logging
log = "0.4.27"
env_logger = "0.11.8"
